--- a/src/components/partials/footer/style.scss
+++ b/src/components/partials/footer/style.scss
@@ -176,9 +176,13 @@ footer {
 		.plug {
 			display: block;
 			position: absolute;
-			bottom: -100px;
+			bottom: 0;
 			left: 280px;
 			width: 400px;
+
+			svg {
+				margin-bottom: -100px;
+			}
 		}
 	}
 }
@@ -192,9 +196,12 @@ footer {
 		}
 
 		.plug {
-			bottom: -130px;
 			left: 300px;
 			width: 500px;
+
+			svg {
+				margin-bottom: -130px;
+			}
 		}
 	}
 }
